--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cache-manager": "^6.4.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^4.1.0",
     "mysql2": "^3.14.1",
     "openai": "^4.96.0",
     "reflect-metadata": "^0.2.2",
