--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "openai": "^4.96.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "snowflake-uid": "^2.1.1",
     "typeorm": "^0.3.22"
   },
   "devDependencies": {
